[b]1.04[/b] (Apr 27, 2014)

*Changed position of the right chat buttons. "G" (Game menu) button is now on left and "C" (ElvUI config) button (aka "E") is now on the right. Also edited dropdown.lua, so that the menu position will not be related to mouse clicks. See dropmenu.lua in core folder.
*Removed the "C" button under the minimap. It's already at the bottomright chat corner. It will appear when BenikUI dataTexts are disabled.
*Added option to toggle BenikUI dataTexts transparency. Hmm.. they look nice without transparency :)
TODO: adopt BG dts

[b]1.03[/b] (Apr 21, 2014)

*Forgot to remove LootWonAlertFrame1 from skinning. Looks baaaad :P

[b]1.02[/b] (Apr 21, 2014)

*Added options to disable each of the Dashboards. Also can now be hidden while in combat.
*Added an option to apply transparency in actionbar dackdrops and actionbar buttons. My ElvUI_Transparent_AB plugin, in case is loaded, will be disabled.

[b]1.01[/b] (Apr 19, 2014)

*Added/changed stuff in the install routine.
*Added BenikUI style in some more frames and tabs.
*Changed the fonts addon a bit. More elegant now and added BenikUI font in Quest title.
*Added an option to force or not BenikUI fonts. A game restart is required to apply.
*Played with the Style function.

[b]1.00[/b] (Apr 16, 2014)

*Final release.
*Fixed and cleaned many small thingies.
*Added Zygor guides in BenikUI style.
*Rearranged the options (got jealous from Blazeflack :P)

[b]0.49beta[/b] (Apr 13, 2014)

*Removed the statusbars from buffs and debuffs. Wasn't working as intended.
*Added an option to hide player text values (health, power or any customText), when mouse over to show xp or rep bars. This is done to prevent rep or xp text overlapping health or power values in case the text is wide (usually with big rep names). Each value will hide if their y offset is < -10.

[b]0.48beta[/b] (Apr 11, 2014)

*Added an option to disable BenikUI chat datatexts. In order to show, default ElvUI chat datatexts must be disabled.
